--- a/fixed-header.html
+++ b/fixed-header.html
@@ -54,6 +54,9 @@
                     Fugit asperiores, eos consectetur illum mollitia harum doloremque voluptatibus quisquam ipsam vitae fugiat, sint explicabo voluptatem magnam esse placeat eaque error suscipit, rerum illo vero pariatur? Exercitationem, eum minus? Debitis.
                 </div>
             </section>
+            <div class="container">
+                <div class="up-btn">Наверх</div>
+            </div>
         </main>
         <footer class="footer">
             <div class="container">
