Доделал фиксед хедер

--- a/fixed-header.html
+++ b/fixed-header.html
@@ -27,7 +27,7 @@
             </div>
         </header>
         <main class="main">
-            <section class="section-1">
+            <section id="startContent" class="section-1">
                 <div class="container">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates laborum sapiente eum aliquid possimus ducimus, quas veniam necessitatibus illo adipisci ullam consequatur, dicta rem, neque reprehenderit beatae impedit est id?
                     Sed doloremque harum recusandae veritatis quos similique accusamus asperiores modi, amet suscipit inventore culpa, facere at, quisquam officiis fugit? Soluta incidunt ipsum mollitia quo quasi exercitationem vel rem ipsam quos!
@@ -55,7 +55,7 @@
                 </div>
             </section>
             <div class="container">
-                <div class="up-btn">Наверх</div>
+                <a href="#startContent" class="up-btn">Наверх</a>
             </div>
         </main>
         <footer class="footer">
