--- a/index.html
+++ b/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная</title>
-    <link rel="stylesheet" href="./css/main.css">
-    <script src="./js/scroll.js" defer></script>
-    <script src="./js/main.js" defer></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Главная</title>
+  <link rel="stylesheet" href="./css/main.css">
+  <script src="./js/scroll.js" defer></script>
+  <script src="./js/main.js" defer></script>
 </head>
+
 <body>
-    <div class="page">
-        <div class="page__wrapper">
-            <ul class="main-list">
-                <li class="main-item">
-                    <a href="fixed-header.html" class="main-link">Фиксированнная шапка</a>
-                </li>
-                <li class="main-item">
-                    <a href="#" class="main-link">Фиксированнная шапка</a>
-                </li>
-                <li class="main-item">
-                    <a href="#" class="main-link">Фиксированнная шапка</a>
-                </li>
-                
-            </ul>
-        </div>
+  <div class="page">
+    <div class="page__wrapper">
+      <ul class="main-list">
+        <li class="main-item">
+          <a href="fixed-header.html" class="main-link">Фиксированнная шапка</a>
+        </li>
+        <li class="main-item">
+          <a href="progress-bar.html" class="main-link">Прогресс бар</a>
+        </li>
+        <li class="main-item">
+          <a href="#" class="main-link">Анимация при скролле</a>
+        </li>
+
+      </ul>
     </div>
+  </div>
 </body>
+
 </html>
