Сделал анимацию при скролле

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a href="progress-bar.html" class="main-link">Прогресс бар</a>
         </li>
         <li class="main-item">
-          <a href="#" class="main-link">Анимация при скролле</a>
+          <a href="animation.html" class="main-link">Анимация при скролле</a>
         </li>
 
       </ul>
