--- a/animation.html
+++ b/animation.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="page">
-    <header class="header">
+    <header id="headerScroll" class="header-scroll">
       <div class="container">
         <h1>Анимация по скроллу</h1>
       </div>
