--- a/fixed-header.html
+++ b/fixed-header.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="page">
-        <header class="header">
+        <header class="header-first">
             <div class="container">
                 <div class="header__wrapper">
                     <div class="logo">
