--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <li class="main-item">
           <a href="animation.html" class="main-link">Анимация при скролле</a>
         </li>
-
+        <li class="main-item">
+          <a href="paralax.html" class="main-link">Параллакс</a>
+        </li>
       </ul>
     </div>
   </div>
