--- a/paralax.html
+++ b/paralax.html
@@ -13,8 +13,9 @@
             <div class="header-paralax__img"></div>
             <div class="header-paralax__box">
                 <h1 class="header-paralax__title">Осенняя галерея</h1>
+                <button class="header-paralax__btn">Просмотреть</button>
                 <p class="header-paralax__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo nostrum laudantium quidem perspiciatis debitis ducimus! Quas repudiandae cum minima eveniet iste. Nobis doloribus reiciendis iure, dolores quia quos at sapiente.</p>
-            </div>
+            </div>   
         </header>
         <main class="main-parallax">
 
